--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "simple_app",
-    "short_name": "simple_app",
+    "name": "account",
+    "short_name": "account",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
