--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "simple_app" "\0"
+            VALUE "FileDescription", "account" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "simple_app" "\0"
+            VALUE "InternalName", "account" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "simple_app.exe" "\0"
-            VALUE "ProductName", "simple_app" "\0"
+            VALUE "OriginalFilename", "account.exe" "\0"
+            VALUE "ProductName", "account" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
