--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,6 +9,7 @@ android {
     namespace = "com.example.account"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
+    compileSdkVersion 33
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
