--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   sembast: ^3.7.2
   path: ^1.9.0
   font_awesome_flutter: ^10.7.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +61,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/image/oo.png
+    - assets/image/
 
 
   # The following line ensures that the Material Icons font is
